--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.6",
     "@astrojs/react": "^4.4.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^19.2.10",
@@ -28,6 +32,7 @@
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3"
   }
 }
