--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fontsource/inter": "^5.2.8",
+    "@imgly/background-removal": "^1.7.0",
     "@pdfsmaller/pdf-encrypt-lite": "^1.0.1",
     "@tailwindcss/vite": "^4.1.18",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
+    "@vite-pwa/astro": "^1.2.0",
     "astro": "^5.16.15",
+    "astro-compressor": "^1.2.0",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
@@ -33,7 +37,9 @@
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "tesseract.js": "^7.0.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "workbox-window": "^7.4.0"
   }
 }
