done for the day

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/inter": "^5.2.8",
+    "@huggingface/transformers": "^3.8.1",
     "@imgly/background-removal": "^1.7.0",
     "@pdfsmaller/pdf-encrypt-lite": "^1.0.1",
     "@tailwindcss/vite": "^4.1.18",
