--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@imgly/background-removal": "^1.7.0",
     "@pdfsmaller/pdf-encrypt-lite": "^1.0.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
@@ -27,6 +28,7 @@
     "astro-compressor": "^1.2.0",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.29.2",
     "jszip": "^3.10.1",
