--- a/package.json
+++ b/package.json
@@ -29,20 +29,24 @@
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "diff": "^8.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.29.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
+    "prettier": "^3.8.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-dropzone": "^14.3.8",
+    "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tesseract.js": "^7.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "workbox-window": "^7.4.0"
+    "workbox-window": "^7.4.0",
+    "xml-js": "^1.6.11"
   }
 }
