--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "diff": "^8.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.29.2",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "pdf-lib": "^1.17.1",
@@ -40,6 +42,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-dropzone": "^14.3.8",
+    "react-i18next": "^16.5.4",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
