--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "diff": "^8.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.29.2",
+    "fuse.js": "^7.1.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
