--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "terser": "^5.46.0"
   }
 }
