--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^19.2.4",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^16.5.4",
+    "react-virtuoso": "^4.18.1",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
